📚 Auto-update: News data refreshed - 2026-01-05 05:29 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -38958,5 +38958,29 @@
         "published": "Mon, 05 Jan 2026 03:30:00 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>How well did the Competition Commission of India (CCI) regulate digital competition in India in 2025? And what should it focus on doing in 2026? Read on to learn more.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-cci-digital-competition-2025-what-should-it-do-2026/\">How Did The CCI Handle The Digital Competition Domain In 2025? And What Should It Do In 2026?</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850488/birdbuddy-2-mini-ces-2026",
+        "title": "Birdbuddy\u2019s new smart feeders aim to make spotting birds easier, even for beginners",
+        "link": "https://www.theverge.com/gadgets/850488/birdbuddy-2-mini-ces-2026",
+        "published": "2026-01-05T00:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Birdbuddy is introducing two new smart bird feeders: the flagship Birdbuddy 2 and the more compact, cheaper Birdbuddy 2 Mini aimed at first-time users and smaller outdoor spaces. Both models are designed to be faster and easier to use than previous generations, with upgraded cameras that can shoot in portrait or landscape and wake instantly [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/samsung-music-studio-5-and-7-hands-on-unique-speaker-designs-debut-at-ces-2026-052009007.html?src=rss",
+        "title": "Samsung Music Studio 5 and 7 hands-on: Unique speaker designs debut at CES 2026",
+        "link": "https://www.engadget.com/audio/speakers/samsung-music-studio-5-and-7-hands-on-unique-speaker-designs-debut-at-ces-2026-052009007.html?src=rss",
+        "published": "Mon, 05 Jan 2026 05:20:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>In addition to its annual soundbar updates, Samsung <a class=\"link\" href=\"https://www.engadget.com/audio/speakers/samsungs-two-new-speakers-will-deliver-crisp-audio-while-blending-into-your-decor-230053770.html\" target=\"_blank\">debuted two new home speakers</a> at CES 2026. The Music Studio 5 and 7 are Bluetooth and Wi-Fi units designed to blend in with your home decor thanks to their minimalist look. They certainly don\u2019t look like your typical speakers, and Samsung has packed them with featu"
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/samsung-hw-qs90h-soundbar-hands-on-impressive-bass-performance-without-a-subwoofer-045727939.html?src=rss",
+        "title": "Samsung HW-QS90H soundbar hands-on: Impressive bass performance without a subwoofer",
+        "link": "https://www.engadget.com/home/home-theater/samsung-hw-qs90h-soundbar-hands-on-impressive-bass-performance-without-a-subwoofer-045727939.html?src=rss",
+        "published": "Mon, 05 Jan 2026 04:57:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We\u2019re used to Samsung <a class=\"link\" href=\"https://www.engadget.com/audio/speakers/samsung-debuts-the-qs700f-soundbar-and-updates-the-q990-at-ces-2025-030042257.html\" target=\"_blank\">updating its Q990 soundbar at CES every year</a>, and 2026 is no different. However, the company also <a class=\"link\" href=\"https://www.engadget.com/audio/speakers/samsungs-two-new-speakers-will-deliver-crisp-audio-while-blending-into-your-decor-230053770.html\" target=\"_blank\">debuted the HW-QS90H</a>: a new all"
     }
 ]
