📚 Auto-update: News data refreshed - 2026-01-05 06:23 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -38982,5 +38982,61 @@
         "published": "Mon, 05 Jan 2026 04:57:27 +0000",
         "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
         "summary": "<p>We\u2019re used to Samsung <a class=\"link\" href=\"https://www.engadget.com/audio/speakers/samsung-debuts-the-qs700f-soundbar-and-updates-the-q990-at-ces-2025-030042257.html\" target=\"_blank\">updating its Q990 soundbar at CES every year</a>, and 2026 is no different. However, the company also <a class=\"link\" href=\"https://www.engadget.com/audio/speakers/samsungs-two-new-speakers-will-deliver-crisp-audio-while-blending-into-your-decor-230053770.html\" target=\"_blank\">debuted the HW-QS90H</a>: a new all"
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/samsung-freestyle-plus-projector-hands-on-ces-2026-060840386.html?src=rss",
+        "title": "Samsung\u2019s Freestyle+ projector hands-on: Much brighter and impressively adaptable",
+        "link": "https://www.engadget.com/home/home-theater/samsung-freestyle-plus-projector-hands-on-ces-2026-060840386.html?src=rss",
+        "published": "Mon, 05 Jan 2026 06:08:41 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Samsung announced its newest portable projector ahead of its First Look showcase at CES 2026, but you might have been a little confused as to what\u2019s changed. The company says the <a href=\"https://www.engadget.com/home/home-theater/samsungs-latest-freestyle-portable-projector-is-brighter-and-smarter-014026804.html\"><ins>Freestyle+</ins></a> is nearly twice as bright as the <a href=\"https://www.engadget.com/samsung-2023-freestyle-portable-projector-cloud-gaming-edge-blending-031336930.html\">202"
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/samsung-brought-an-absolute-beast-of-a-130-inch-micro-rgb-tv-to-ces-2026-060245387.html?src=rss",
+        "title": "Samsung brought an absolute beast of a 130-inch Micro RGB TV to CES 2026",
+        "link": "https://www.engadget.com/home/home-theater/samsung-brought-an-absolute-beast-of-a-130-inch-micro-rgb-tv-to-ces-2026-060245387.html?src=rss",
+        "published": "Mon, 05 Jan 2026 06:02:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Amid endless AI hype and a guest visit from the CEO of Hartford Steam Boiler (?!), Samsung had a big surprise for us tonight at CES 2026: A massive 130-inch Micro RGB TV. It\u2019s so large, it\u2019s suspended by a large metal stand that surrounds the entire screen,  which also lets you tilt the screen just a bit. (For the Samsung diehards, it\u2019s basically a reinvention of its <a class=\"link\" href=\"https://news.samsung.com/global/part%E2%85%A1-a-timeless-gallery-design-that-redefines-the-space-we-live-"
+    },
+    {
+        "id": "https://logicaffeine.com/guide",
+        "title": "Logos Language Guide: Compile English to Rust",
+        "link": "https://logicaffeine.com/guide",
+        "published": "Thu, 01 Jan 2026 13:48:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46454085\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-amazon-fire-tv-settings-to-change/",
+        "title": "Own a Fire TV? I changed 10 settings to make the system run like new again",
+        "link": "https://www.zdnet.com/article/best-amazon-fire-tv-settings-to-change/",
+        "published": "Mon, 05 Jan 2026 06:15:43 GMT",
+        "source": "Latest news",
+        "summary": "If your Fire TV or Fire TV Stick is running slow, don't replace it just yet. These quick tweaks can make all the difference."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/doordash-shuts-down-drivers-account-after-ai-generated-image-used-to-fake-delivery/articleshow/126345297.cms",
+        "title": "DoorDash shuts down driver's account after AI-generated image used to fake delivery",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/doordash-shuts-down-drivers-account-after-ai-generated-image-used-to-fake-delivery/articleshow/126345297.cms",
+        "published": "Mon, 05 Jan 2026 11:11:16 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "DoorDash has banned a rider after an AI-generated image was allegedly used to fake a delivery, TechCrunch reported. The case emerged after Austin-based author Byrne Hobart received a false \u201cdelivered\u201d alert, though no food arrived. DoorDash investigated, refunded the order and said it has zero tolerance for fraud."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/nykaa-sees-q3-revenue-growth-in-mid-twenties-fashion-business-continues-to-lag-beauty/articleshow/126345116.cms",
+        "title": "Nykaa sees Q3 revenue growth in mid-twenties, fashion business continues to lag beauty",
+        "link": "https://economictimes.indiatimes.com/tech/technology/nykaa-sees-q3-revenue-growth-in-mid-twenties-fashion-business-continues-to-lag-beauty/articleshow/126345116.cms",
+        "published": "Mon, 05 Jan 2026 10:51:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nykaa expects December-quarter net revenue growth at the upper end of the mid-twenties YoY, led by strong beauty demand. Beauty saw its fastest growth in the past six quarters, while fashion lagged due to weaker marketing income streams. The update, issued by the company, is provisional and subject to audit, it said in the filing."
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-delhi-hc-sharechat-sued-in-delhi-for-zee-copyright-infringement/",
+        "title": "Delhi HC Rejects ShareChat Owner\u2019s Jurisdiction Arguement in Zee\u2019s copyright case",
+        "link": "https://www.medianama.com/2026/01/223-delhi-hc-sharechat-sued-in-delhi-for-zee-copyright-infringement/",
+        "published": "Mon, 05 Jan 2026 05:52:18 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Delhi High Court held that website accessibility in Delhi is enough to establish jurisdiction in Zee Entertainment\u2019s copyright case against ShareChat and Moj.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-delhi-hc-sharechat-sued-in-delhi-for-zee-copyright-infringement/\">Delhi HC Rejects ShareChat Owner\u2019s Jurisdiction Arguement in Zee\u2019s copyright case</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
