--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -39038,5 +39038,61 @@
         "published": "Mon, 05 Jan 2026 05:52:18 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Delhi High Court held that website accessibility in Delhi is enough to establish jurisdiction in Zee Entertainment\u2019s copyright case against ShareChat and Moj.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-delhi-hc-sharechat-sued-in-delhi-for-zee-copyright-infringement/\">Delhi HC Rejects ShareChat Owner\u2019s Jurisdiction Arguement in Zee\u2019s copyright case</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854457/frontierx-vex-aura-robots-companions-pets",
+        "title": "This robot companion is a cameraman for your pet",
+        "link": "https://www.theverge.com/tech/854457/frontierx-vex-aura-robots-companions-pets",
+        "published": "2026-01-05T01:37:23-05:00",
+        "source": "The Verge",
+        "summary": "For a long time, tech companies have pitched pet cameras as a way to find out what your furball is up to when you're not home. Vex, a new robot companion launched at CES this week, takes that a step further: it follows your pet around, filming as it goes, and uses AI smarts to [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/science/loreals-ces-2026-beauty-devices-include-a-skin-like-flexible-led-mask-070000576.html?src=rss",
+        "title": "L'Or\u00e9al\u2019s CES 2026 beauty devices include a skin-like flexible LED mask",
+        "link": "https://www.engadget.com/science/loreals-ces-2026-beauty-devices-include-a-skin-like-flexible-led-mask-070000576.html?src=rss",
+        "published": "Mon, 05 Jan 2026 07:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Over the <a class=\"link\" href=\"https://www.engadget.com/loreal-hapta-lipstick-applicator-at-ces-2023-080653733.html\" target=\"_blank\">last</a> <a class=\"link\" href=\"https://www.engadget.com/2015-05-18-loreal-is-3d-printing-its-own-human-skin-to-test-cosmetics.html\" target=\"_blank\">ten or so</a> <a class=\"link\" href=\"https://www.engadget.com/loreal-hair-color-at-home-device-colorsonic-ces-170049309.html\" target=\"_blank\">years</a>, L'Or\u00e9al has brought a taste of beauty tech to the masses at <a c"
+    },
+    {
+        "id": "http://mpaxos.com/blog/rusty-cpp.html",
+        "title": "Building a Rust-style static analyzer for C++ with AI",
+        "link": "http://mpaxos.com/blog/rusty-cpp.html",
+        "published": "Mon, 05 Jan 2026 05:11:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46495539\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-phone-settings-better-battery-life/",
+        "title": "Use a Samsung phone? I changed these 7 settings to significantly improve the battery life",
+        "link": "https://www.zdnet.com/article/samsung-phone-settings-better-battery-life/",
+        "published": "Mon, 05 Jan 2026 06:32:47 GMT",
+        "source": "Latest news",
+        "summary": "Your Samsung phone may already have decent battery life, but a few smart tweaks can make that even more enduring."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-turn-on-private-dns-mode-on-android-phone/",
+        "title": "How to turn on Private DNS Mode on Android - and why you should do it ASAP",
+        "link": "https://www.zdnet.com/article/how-to-turn-on-private-dns-mode-on-android-phone/",
+        "published": "Mon, 05 Jan 2026 06:30:00 GMT",
+        "source": "Latest news",
+        "summary": "Unencrypted DNS can expose your browsing, but Android's Private DNS keeps it secure. Here's how to enable it."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/reddit-overtakes-tiktok-in-the-uk-as-google-gen-z-drive-its-rise/articleshow/126346307.cms",
+        "title": "Reddit overtakes TikTok in the UK as Google, Gen Z drive its rise",
+        "link": "https://economictimes.indiatimes.com/tech/technology/reddit-overtakes-tiktok-in-the-uk-as-google-gen-z-drive-its-rise/articleshow/126346307.cms",
+        "published": "Mon, 05 Jan 2026 12:07:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Reddit has overtaken TikTok to become the UK\u2019s fourth most-visited social media platform, boosted by Google search changes and Gen Z usage. The site now reaches 60% of UK internet users, with strong growth among young and female audiences. Partnerships with Google and OpenAI, GenZ seeking real advice and plus live sports discussion, have driven traffic."
+    },
+    {
+        "id": "https://inc42.com/buzz/deepinder-goyals-lat-aerospace-validates-short-take-off-capability-aircraft-crashes-later/",
+        "title": "Deepinder Goyal\u2019s LAT Aerospace Validates Short Take-Off Capability, Aircraft Crashes Later",
+        "link": "https://inc42.com/buzz/deepinder-goyals-lat-aerospace-validates-short-take-off-capability-aircraft-crashes-later/",
+        "published": "Mon, 05 Jan 2026 06:51:44 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"LAT Aerospace conducted the maiden test flight of \u2018Lat One v0.1\u2019 and claimed to have achieved uSTOL\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/zomato-aerospace-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Deepinder Goyal-backed aviation venture LAT Aerospace conducted the maiden test flight of \u2018Lat One v0.1\u2019 and claimed to have achieved&#8230;"
     }
 ]
