📚 Auto-update: News data refreshed - 2026-01-05 08:19 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -39094,5 +39094,45 @@
         "published": "Mon, 05 Jan 2026 06:51:44 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"LAT Aerospace conducted the maiden test flight of \u2018Lat One v0.1\u2019 and claimed to have achieved uSTOL\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/zomato-aerospace-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Deepinder Goyal-backed aviation venture LAT Aerospace conducted the maiden test flight of \u2018Lat One v0.1\u2019 and claimed to have achieved&#8230;"
+    },
+    {
+        "id": "https://www.cs.cmu.edu/~pavlo/blog/2026/01/2025-databases-retrospective.html",
+        "title": "Databases in 2025: A Year in Review",
+        "link": "https://www.cs.cmu.edu/~pavlo/blog/2026/01/2025-databases-retrospective.html",
+        "published": "Mon, 05 Jan 2026 07:14:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46496103\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/hyper-trackpad-pro-ces-news/",
+        "title": "Finally, a computing accessory that both PC enthusiasts and professionals can be excited for",
+        "link": "https://www.zdnet.com/article/hyper-trackpad-pro-ces-news/",
+        "published": "Mon, 05 Jan 2026 07:22:00 GMT",
+        "source": "Latest news",
+        "summary": "Hyper announced a release date for its much-anticipated TrackPad Pro ahead of CES 2026."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tcl-note-a1-nxtpaper-ces/",
+        "title": "TCL's new E Ink tablet beats the Remarkable and Kindle with this display tech",
+        "link": "https://www.zdnet.com/article/tcl-note-a1-nxtpaper-ces/",
+        "published": "Mon, 05 Jan 2026 07:21:00 GMT",
+        "source": "Latest news",
+        "summary": "TCL's Note A1 Nxtpaper tablet features a full-color display at 120Hz while retaining the digital paper experience."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/unnati-to-acquire-info-edge-backed-farm-input-platform-gramophone",
+        "title": "Agri fintech startup Unnati to acquire Info Edge-backed farm input platform Gramophone",
+        "link": "https://yourstory.com/2026/01/unnati-to-acquire-info-edge-backed-farm-input-platform-gramophone",
+        "published": "Mon, 05 Jan 2026 05:36:53 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Founded in 2010, Gramophone operates a digital platform for the distribution of agricultural inputs. It reported a revenue of about Rs 67 crore in the financial year ended March 2025."
+    },
+    {
+        "id": "https://inc42.com/features/deeptech-enters-top-sector-ladder-in-2025-fintech-ecommerce-continues-to-lead/",
+        "title": "Deeptech Enters Top Sector Ladder In 2025, Fintech & Ecommerce Continues To Lead",
+        "link": "https://inc42.com/features/deeptech-enters-top-sector-ladder-in-2025-fintech-ecommerce-continues-to-lead/",
+        "published": "Mon, 05 Jan 2026 08:15:19 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Deeptech Enters Top Sector Ladder In 2025, Fintech &amp; Ecommerce Continues To Lead\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-2.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />From the evident IPO wave to several startups shutting down, the Indian startup ecosystem saw several milestones while facing some&#8230;"
     }
 ]
