--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -39134,5 +39134,69 @@
         "published": "Mon, 05 Jan 2026 08:15:19 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Deeptech Enters Top Sector Ladder In 2025, Fintech &amp; Ecommerce Continues To Lead\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-2.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />From the evident IPO wave to several startups shutting down, the Indian startup ecosystem saw several milestones while facing some&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/flutterwave-buys-nigerias-mono-in-rare-african-fintech-exit/",
+        "title": "Flutterwave buys Nigeria\u2019s Mono in rare African fintech exit",
+        "link": "https://techcrunch.com/2026/01/05/flutterwave-buys-nigerias-mono-in-rare-african-fintech-exit/",
+        "published": "Mon, 05 Jan 2026 08:55:28 +0000",
+        "source": "TechCrunch",
+        "summary": "Africa\u2019s largest fintech company, Flutterwave, has acquired Nigerian open banking startup Mono in an all-stock deal valued between $25 million and $40 million, according to people familiar with the transaction. The acquisition brings together two of Africa\u2019s leading fintech infrastructure companies. Flutterwave operates one of the continent\u2019s widest payments networks, while Mono, often described as [&#8230;]"
+    },
+    {
+        "id": "https://www.dlp.rip/decorative-cryptography",
+        "title": "Decorative Cryptography",
+        "link": "https://www.dlp.rip/decorative-cryptography",
+        "published": "Mon, 05 Jan 2026 08:29:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46496494\">Comments</a>"
+    },
+    {
+        "id": "https://www.nytimes.com/2025/11/08/science/biggest-spiderweb-sulfur-cave.html",
+        "title": "A spider web unlike any seen before",
+        "link": "https://www.nytimes.com/2025/11/08/science/biggest-spiderweb-sulfur-cave.html",
+        "published": "Mon, 05 Jan 2026 07:06:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46496054\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/google-cloud-gen-ai-exchange-hackathon-the-10-innovations-that-stood-out-this-year",
+        "title": "Google Cloud Gen AI Exchange Hackathon: The 10 innovations that stood out this year",
+        "link": "https://yourstory.com/2025/12/google-cloud-gen-ai-exchange-hackathon-the-10-innovations-that-stood-out-this-year",
+        "published": "Mon, 05 Jan 2026 08:28:41 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "This year\u2019s winning teams tackled challenges spanning youth wellness, manufacturing, governance, travel, and more. Together, they offer a glimpse into how generative AI is being shaped for India\u2019s real-world contexts.\n\nSurya Kannoth\n\nThe second edition of the Gen AI Exchange Hackathon, by Google"
+    },
+    {
+        "id": "https://inc42.com/buzz/centre-mulling-to-revoke-xs-safe-harbour-over-grok-misuse-report/",
+        "title": "Centre Mulling To Revoke X\u2019s Safe Harbour Over Grok Misuse: Report",
+        "link": "https://inc42.com/buzz/centre-mulling-to-revoke-xs-safe-harbour-over-grok-misuse-report/",
+        "published": "Mon, 05 Jan 2026 09:01:19 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"MeitY mulling to revoke X&#039;s safe harbour status\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/05/deepfake-ft.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid allegations of X-owned GenAI chatbot Grok generating obscene images based on users\u2019 prompts, the Indian government has reportedly issued&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/unnati-to-acquire-info-edge-backed-agritech-startup-gramophone/",
+        "title": "Unnati To Acquire Info Edge-Backed Agritech Startup Gramophone",
+        "link": "https://inc42.com/buzz/unnati-to-acquire-info-edge-backed-agritech-startup-gramophone/",
+        "published": "Mon, 05 Jan 2026 08:41:12 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Unnati To Acquire Info Edge-Backed Agritech Startup Gramophone\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/03/agritech-UP-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Agritech startup Unnati is set to acquire Info Edge-backed peer startup Gramophone. In an exchange filing, Info Edge said its&#8230;"
+    },
+    {
+        "id": "https://inc42.com/resources/premiumisation-and-purpose-how-indian-consumers-redefined-retail-in-2025/",
+        "title": "Premiumisation And Purpose: How Indian Consumers Redefined Retail In 2025",
+        "link": "https://inc42.com/resources/premiumisation-and-purpose-how-indian-consumers-redefined-retail-in-2025/",
+        "published": "Mon, 05 Jan 2026 08:34:37 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Premiumisation And Purpose: How Indian Consumers Redefined Retail in 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-47.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />In 2025, India\u2019s premium retail market crossed an inflection point. What appeared incremental over the past decade became structurally visible&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-delhi-hc-dynamic-injunction-piracy-sites-illegally-streaming-netflix-warner-bros-content/",
+        "title": "Delhi HC Orders Dynamic+ Injunction Against Websites Illegally Streaming Netflix, Warner Bros. Content",
+        "link": "https://www.medianama.com/2026/01/223-delhi-hc-dynamic-injunction-piracy-sites-illegally-streaming-netflix-warner-bros-content/",
+        "published": "Mon, 05 Jan 2026 09:02:25 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Delhi HC grants Dynamic+ injunction blocking piracy websites streaming Netflix, Warner Bros, Disney, Apple TV+, and Crunchyroll content. The order extends to mirror and redirect domains to curb large-scale online piracy.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-delhi-hc-dynamic-injunction-piracy-sites-illegally-streaming-netflix-warner-bros-content/\">Delhi HC Orders Dynamic+ Injunction Against Websites Illegally Streaming Netflix, Warner Bros. Content</a> appeared first "
     }
 ]
