📚 Auto-update: News data refreshed - 2026-01-05 10:15 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -39198,5 +39198,69 @@
         "published": "Mon, 05 Jan 2026 09:02:25 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Delhi HC grants Dynamic+ injunction blocking piracy websites streaming Netflix, Warner Bros, Disney, Apple TV+, and Crunchyroll content. The order extends to mirror and redirect domains to curb large-scale online piracy.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-delhi-hc-dynamic-injunction-piracy-sites-illegally-streaming-netflix-warner-bros-content/\">Delhi HC Orders Dynamic+ Injunction Against Websites Illegally Streaming Netflix, Warner Bros. Content</a> appeared first "
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/kodiak-taps-bosch-to-scale-its-self-driving-truck-tech/",
+        "title": "Kodiak taps Bosch to scale its self-driving truck tech",
+        "link": "https://techcrunch.com/2026/01/05/kodiak-taps-bosch-to-scale-its-self-driving-truck-tech/",
+        "published": "Mon, 05 Jan 2026 10:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "There is no timeline for when these systems will become available. But once they do, Kodiak could bring its tech to more trucks, faster."
+    },
+    {
+        "id": "https://www.wired.com/story/crispr-flu-antivirals/",
+        "title": "Flu Is Relentless. Crispr Might Be Able to Shut It Down",
+        "link": "https://www.wired.com/story/crispr-flu-antivirals/",
+        "published": "Mon, 05 Jan 2026 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Innovative research into the gene-editing tool targets influenza\u2019s ability to replicate\u2014stopping it in its tracks."
+    },
+    {
+        "id": "https://www.engadget.com/apps/best-meditation-app-140047993.html?src=rss",
+        "title": "The 5 best meditation apps for 2026",
+        "link": "https://www.engadget.com/apps/best-meditation-app-140047993.html?src=rss",
+        "published": "Mon, 05 Jan 2026 10:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Daily life can get loud, and meditation apps offer a simple way to carve out a little breathing room. You do not need experience to start, and you do not need to commit to long sessions either. Most apps guide you through short practices that help with focus, sleep and stress, making it easy to build a routine even on busy days.<br /><br />There are plenty of meditation apps to choose from, each with its own style and approach. Some focus on mindfulness basics, others offer structured program"
+    },
+    {
+        "id": "https://robotsinplainenglish.com/e/2025-12-27-roomba.html",
+        "title": "Revisiting the original Roomba and its simple architecture",
+        "link": "https://robotsinplainenglish.com/e/2025-12-27-roomba.html",
+        "published": "Sat, 03 Jan 2026 04:53:20 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46472930\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-we-test-robot-vacuums/",
+        "title": "How we test robot vacuums at ZDNET in 2026",
+        "link": "https://www.zdnet.com/article/how-we-test-robot-vacuums/",
+        "published": "Mon, 05 Jan 2026 10:00:42 GMT",
+        "source": "Latest news",
+        "summary": "Testing a robot vacuum involves a lot of patience, experimenting, and watching a robot roll around the floor, but it can make a big difference in a buyer's decision."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-driven-inflation-is-2026s-most-overlooked-risk-investors-say/articleshow/126349137.cms",
+        "title": "AI-driven inflation is 2026's most overlooked risk, investors say",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-driven-inflation-is-2026s-most-overlooked-risk-investors-say/articleshow/126349137.cms",
+        "published": "Mon, 05 Jan 2026 14:29:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Global markets have surged on AI optimism, but investors may be overlooking rising inflation risks linked to heavy tech investment. Fund managers warn that government stimulus and AI-driven costs could push inflation higher, forcing central banks to tighten policy. Tighter money would hit tech valuations, profits and investor appetite."
+    },
+    {
+        "id": "https://inc42.com/buzz/nykaa-expects-upper-mid-twenties-revenue-growth-in-q3-fy26/",
+        "title": "Nykaa Expects Upper Mid-Twenties Revenue Growth In Q3 FY26",
+        "link": "https://inc42.com/buzz/nykaa-expects-upper-mid-twenties-revenue-growth-in-q3-fy26/",
+        "published": "Mon, 05 Jan 2026 09:59:54 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Nykaa Expects Upper Mid-Twenties Revenue Growth In Q3 FY26\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/Nykaa-FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Beauty and personal care ecommerce major Nykaa expects to report net revenue growth in the upper end of mid-twenties in&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/centre-mulls-revoking-xs-safe-harbour-over-grok-misuse-report/",
+        "title": "Centre Mulls Revoking X\u2019s Safe Harbour Over Grok Misuse: Report",
+        "link": "https://inc42.com/buzz/centre-mulls-revoking-xs-safe-harbour-over-grok-misuse-report/",
+        "published": "Mon, 05 Jan 2026 09:01:19 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"MeitY mulling to revoke X&#039;s safe harbour status\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/05/deepfake-ft.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid allegations of X-owned GenAI chatbot Grok generating obscene images based on users\u2019 prompts, the Indian government has reportedly issued&#8230;"
     }
 ]
